--- a/src/main/resources/templates/blog/blog_admin/index.html
+++ b/src/main/resources/templates/blog/blog_admin/index.html
@@ -28,7 +28,7 @@
         <header>
             <!-- logo -->
             <div class="am-fl tpl-header-logo">
-                <a href="javascript:;"><img src="ui/img/logo.png" alt=""></a>
+                <a href="javascript:;"><img src="ui/img/vlogo.png" alt="">PersonalBlog</a>
             </div>
             <!-- 右侧内容 -->
             <div class="tpl-header-fluid">
@@ -204,68 +204,172 @@
                 <li class="sidebar-nav-heading">Components <span class="sidebar-nav-heading-info"> 附加组件</span></li>
                 <li class="sidebar-nav-link">
                     <a href="index.html" class="active">
-                        <i class="am-icon-home sidebar-nav-link-logo"></i> 首页
+                        <i class="am-icon-home sidebar-nav-link-logo"></i> 控制台
                     </a>
                 </li>
                 <li class="sidebar-nav-link">
-                    <a href="tables.html">
-                        <i class="am-icon-table sidebar-nav-link-logo"></i> 表格
+                    <a href="index.html">
+                        <i class="am-icon-home sidebar-nav-link-logo"></i> 个人简历设置
                     </a>
                 </li>
                 <li class="sidebar-nav-link">
-                    <a href="calendar.html">
-                        <i class="am-icon-calendar sidebar-nav-link-logo"></i> 日历
+                    <a href="index.html">
+                        <i class="am-icon-home sidebar-nav-link-logo"></i> 产品库管理
                     </a>
                 </li>
                 <li class="sidebar-nav-link">
-                    <a href="form.html">
-                        <i class="am-icon-wpforms sidebar-nav-link-logo"></i> 表单
-
-                    </a>
-                </li>
-                <li class="sidebar-nav-link">
-                    <a href="chart.html">
-                        <i class="am-icon-bar-chart sidebar-nav-link-logo"></i> 图表
-
+                    <a href="index.html">
+                        <i class="am-icon-home sidebar-nav-link-logo"></i> 客户反馈消息管理
                     </a>
                 </li>
 
-                <li class="sidebar-nav-heading">Page<span class="sidebar-nav-heading-info"> 常用页面</span></li>
+
+
+                <li class="sidebar-nav-link">
+                    <a href="index.html">
+                        <i class="am-icon-home sidebar-nav-link-logo"></i> 博客分类管理
+                    </a>
+                </li>
+                <li class="sidebar-nav-link">
+                    <a href="index.html">
+                        <i class="am-icon-home sidebar-nav-link-logo"></i> 博客文章管理
+                    </a>
+                </li>
+                <li class="sidebar-nav-link">
+                    <a href="index.html">
+                        <i class="am-icon-home sidebar-nav-link-logo"></i> 文件下载设置
+                    </a>
+                </li>
+                <li class="sidebar-nav-link">
+                    <a href="index.html">
+                        <i class="am-icon-home sidebar-nav-link-logo"></i> 图片存储管理
+                    </a>
+                </li>
+
                 <li class="sidebar-nav-link">
                     <a href="javascript:;" class="sidebar-nav-sub-title">
-                        <i class="am-icon-table sidebar-nav-link-logo"></i> 数据列表
+                        <i class="am-icon-table sidebar-nav-link-logo"></i> 系统监控
                         <span class="am-icon-chevron-down am-fr am-margin-right-sm sidebar-nav-sub-ico"></span>
                     </a>
                     <ul class="sidebar-nav sidebar-nav-sub">
                         <li class="sidebar-nav-link">
                             <a href="table-list.html">
-                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 文字列表
+                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 在线用户
                             </a>
                         </li>
 
                         <li class="sidebar-nav-link">
                             <a href="table-list-img.html">
-                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 图文列表
+                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 系统日志
+                            </a>
+                        </li>
+                        <li class="sidebar-nav-link">
+                            <a href="table-list-img.html">
+                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 登录日志
+                            </a>
+                        </li>
+                        <li class="sidebar-nav-link">
+                            <a href="table-list-img.html">
+                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 请求追踪
+                            </a>
+                        </li>
+                        <li class="sidebar-nav-link">
+                            <a href="table-list-img.html">
+                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 系统配置
                             </a>
                         </li>
                     </ul>
                 </li>
+
                 <li class="sidebar-nav-link">
-                    <a href="sign-up.html">
-                        <i class="am-icon-clone sidebar-nav-link-logo"></i> 注册
-                        <span class="am-badge am-badge-secondary sidebar-nav-link-logo-ico am-round am-fr am-margin-right-sm">6</span>
+                    <a href="javascript:;" class="sidebar-nav-sub-title">
+                        <i class="am-icon-table sidebar-nav-link-logo"></i> 系统管理
+                        <span class="am-icon-chevron-down am-fr am-margin-right-sm sidebar-nav-sub-ico"></span>
                     </a>
+                    <ul class="sidebar-nav sidebar-nav-sub">
+                        <li class="sidebar-nav-link">
+                            <a href="table-list.html">
+                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 用户管理
+                            </a>
+                        </li>
+                        <li class="sidebar-nav-link">
+                            <a href="table-list-img.html">
+                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 角色管理
+                            </a>
+                        </li>
+                        <li class="sidebar-nav-link">
+                            <a href="table-list-img.html">
+                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 部门管理
+                            </a>
+                        </li>
+                        <li class="sidebar-nav-link">
+                            <a href="table-list-img.html">
+                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 安全设置
+                            </a>
+                        </li>
+
+                        <li class="sidebar-nav-link">
+                            <a href="table-list-img.html">
+                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 数据字典管理
+                            </a>
+                        </li>
+                    </ul>
                 </li>
-                <li class="sidebar-nav-link">
-                    <a href="login.html">
-                        <i class="am-icon-key sidebar-nav-link-logo"></i> 登录
-                    </a>
-                </li>
-                <li class="sidebar-nav-link">
-                    <a href="404.html">
-                        <i class="am-icon-tv sidebar-nav-link-logo"></i> 404错误
-                    </a>
-                </li>
+
+<!--                <li class="sidebar-nav-link">-->
+<!--                <a href="calendar.html">-->
+<!--                    <i class="am-icon-calendar sidebar-nav-link-logo"></i> 日历-->
+<!--                </a>-->
+<!--            </li>-->
+<!--                <li class="sidebar-nav-link">-->
+<!--                    <a href="form.html">-->
+<!--                        <i class="am-icon-wpforms sidebar-nav-link-logo"></i> 表单-->
+
+<!--                    </a>-->
+<!--                </li>-->
+<!--                <li class="sidebar-nav-link">-->
+<!--                    <a href="chart.html">-->
+<!--                        <i class="am-icon-bar-chart sidebar-nav-link-logo"></i> 图表-->
+
+<!--                    </a>-->
+<!--                </li>-->
+
+<!--                <li class="sidebar-nav-heading">Page<span class="sidebar-nav-heading-info"> 常用页面</span></li>-->
+<!--                <li class="sidebar-nav-link">-->
+<!--                    <a href="javascript:;" class="sidebar-nav-sub-title">-->
+<!--                        <i class="am-icon-table sidebar-nav-link-logo"></i> 数据列表-->
+<!--                        <span class="am-icon-chevron-down am-fr am-margin-right-sm sidebar-nav-sub-ico"></span>-->
+<!--                    </a>-->
+<!--                    <ul class="sidebar-nav sidebar-nav-sub">-->
+<!--                        <li class="sidebar-nav-link">-->
+<!--                            <a href="table-list.html">-->
+<!--                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 文字列表-->
+<!--                            </a>-->
+<!--                        </li>-->
+
+<!--                        <li class="sidebar-nav-link">-->
+<!--                            <a href="table-list-img.html">-->
+<!--                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 图文列表-->
+<!--                            </a>-->
+<!--                        </li>-->
+<!--                    </ul>-->
+<!--                </li>-->
+<!--                <li class="sidebar-nav-link">-->
+<!--                    <a href="sign-up.html">-->
+<!--                        <i class="am-icon-clone sidebar-nav-link-logo"></i> 注册-->
+<!--                        <span class="am-badge am-badge-secondary sidebar-nav-link-logo-ico am-round am-fr am-margin-right-sm">6</span>-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--                <li class="sidebar-nav-link">-->
+<!--                    <a href="login.html">-->
+<!--                        <i class="am-icon-key sidebar-nav-link-logo"></i> 登录-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--                <li class="sidebar-nav-link">-->
+<!--                    <a href="404.html">-->
+<!--                        <i class="am-icon-tv sidebar-nav-link-logo"></i> 404错误-->
+<!--                    </a>-->
+<!--                </li>-->
 
             </ul>
         </div>
