--- a/src/main/resources/templates/blog/blog_admin/index.html
+++ b/src/main/resources/templates/blog/blog_admin/index.html
@@ -50,7 +50,7 @@
                     <ul>
                         <!-- 欢迎语 -->
                         <li class="am-text-sm tpl-header-navbar-welcome">
-                            <a href="javascript:;">欢迎你, <span>Amaze UI</span> </a>
+                            <a href="javascript:;">欢迎你, <span>SUPERSTARLIQUN</span> </a>
                         </li>
 
                         <!-- 新邮件 -->
@@ -160,7 +160,7 @@
 
                         <!-- 退出 -->
                         <li class="am-text-sm">
-                            <a href="javascript:;">
+                            <a href="/logout">
                                 <span class="am-icon-sign-out"></span> 退出
                             </a>
                         </li>
@@ -315,62 +315,6 @@
                         </li>
                     </ul>
                 </li>
-
-<!--                <li class="sidebar-nav-link">-->
-<!--                <a href="calendar.html">-->
-<!--                    <i class="am-icon-calendar sidebar-nav-link-logo"></i> 日历-->
-<!--                </a>-->
-<!--            </li>-->
-<!--                <li class="sidebar-nav-link">-->
-<!--                    <a href="form.html">-->
-<!--                        <i class="am-icon-wpforms sidebar-nav-link-logo"></i> 表单-->
-
-<!--                    </a>-->
-<!--                </li>-->
-<!--                <li class="sidebar-nav-link">-->
-<!--                    <a href="chart.html">-->
-<!--                        <i class="am-icon-bar-chart sidebar-nav-link-logo"></i> 图表-->
-
-<!--                    </a>-->
-<!--                </li>-->
-
-<!--                <li class="sidebar-nav-heading">Page<span class="sidebar-nav-heading-info"> 常用页面</span></li>-->
-<!--                <li class="sidebar-nav-link">-->
-<!--                    <a href="javascript:;" class="sidebar-nav-sub-title">-->
-<!--                        <i class="am-icon-table sidebar-nav-link-logo"></i> 数据列表-->
-<!--                        <span class="am-icon-chevron-down am-fr am-margin-right-sm sidebar-nav-sub-ico"></span>-->
-<!--                    </a>-->
-<!--                    <ul class="sidebar-nav sidebar-nav-sub">-->
-<!--                        <li class="sidebar-nav-link">-->
-<!--                            <a href="table-list.html">-->
-<!--                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 文字列表-->
-<!--                            </a>-->
-<!--                        </li>-->
-
-<!--                        <li class="sidebar-nav-link">-->
-<!--                            <a href="table-list-img.html">-->
-<!--                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 图文列表-->
-<!--                            </a>-->
-<!--                        </li>-->
-<!--                    </ul>-->
-<!--                </li>-->
-<!--                <li class="sidebar-nav-link">-->
-<!--                    <a href="sign-up.html">-->
-<!--                        <i class="am-icon-clone sidebar-nav-link-logo"></i> 注册-->
-<!--                        <span class="am-badge am-badge-secondary sidebar-nav-link-logo-ico am-round am-fr am-margin-right-sm">6</span>-->
-<!--                    </a>-->
-<!--                </li>-->
-<!--                <li class="sidebar-nav-link">-->
-<!--                    <a href="login.html">-->
-<!--                        <i class="am-icon-key sidebar-nav-link-logo"></i> 登录-->
-<!--                    </a>-->
-<!--                </li>-->
-<!--                <li class="sidebar-nav-link">-->
-<!--                    <a href="404.html">-->
-<!--                        <i class="am-icon-tv sidebar-nav-link-logo"></i> 404错误-->
-<!--                    </a>-->
-<!--                </li>-->
-
             </ul>
         </div>
 
@@ -381,11 +325,11 @@
             <div class="container-fluid am-cf">
                 <div class="row">
                     <div class="am-u-sm-12 am-u-md-12 am-u-lg-9">
-                        <div class="page-header-heading"><span class="am-icon-home page-header-heading-icon"></span> 部件首页 <small>Amaze UI</small></div>
-                        <p class="page-header-description">Amaze UI 含近 20 个 CSS 组件、20 余 JS 组件，更有多个包含不同主题的 Web 组件。</p>
-                    </div>
-                    <div class="am-u-lg-3 tpl-index-settings-button">
-                        <button type="button" class="page-header-button"><span class="am-icon-paint-brush"></span> 设置</button>
+                        <div class="page-header-heading"><span class="am-icon-home page-header-heading-icon"></span> 控制台 <small>Console</small></div>
+                        <p class="page-header-description">
+                            最近访问：<a>个人简历</a><a>博客系统</a><a>文件下载</a>
+                        </p>
+
                     </div>
                 </div>
 
@@ -396,7 +340,7 @@
                     <div class="am-u-sm-12 am-u-md-12 am-u-lg-4">
                         <div class="widget am-cf">
                             <div class="widget-head am-cf">
-                                <div class="widget-title am-fl">月度财务收支计划</div>
+                                <div class="widget-title am-fl">系统用户访问量</div>
                                 <div class="widget-function am-fr">
                                     <a href="javascript:;" class="am-icon-cog"></a>
                                 </div>
@@ -462,7 +406,7 @@
                     <div class="am-u-sm-12 am-u-md-8">
                         <div class="widget am-cf">
                             <div class="widget-head am-cf">
-                                <div class="widget-title am-fl">月度财务收支计划</div>
+                                <div class="widget-title am-fl">用户访问数据统计</div>
                                 <div class="widget-function am-fr">
                                     <a href="javascript:;" class="am-icon-cog"></a>
                                 </div>
@@ -476,24 +420,24 @@
                     <div class="am-u-sm-12 am-u-md-4">
                         <div class="widget am-cf">
                             <div class="widget-head am-cf">
-                                <div class="widget-title am-fl">专用服务器负载</div>
+                                <div class="widget-title am-fl">装载服务器数据</div>
                                 <div class="widget-function am-fr">
                                     <a href="javascript:;" class="am-icon-cog"></a>
                                 </div>
                             </div>
                             <div class="widget-body widget-body-md am-fr">
 
-                                <div class="am-progress-title">CPU Load <span class="am-fr am-progress-title-more">28% / 100%</span></div>
+                                <div class="am-progress-title">CPU Load <span class="am-fr am-progress-title-more">18% / 100%</span></div>
                                 <div class="am-progress">
-                                    <div class="am-progress-bar" style="width: 15%"></div>
+                                    <div class="am-progress-bar" style="width: 18%"></div>
                                 </div>
-                                <div class="am-progress-title">CPU Load <span class="am-fr am-progress-title-more">28% / 100%</span></div>
+                                <div class="am-progress-title">内存 Load <span class="am-fr am-progress-title-more">64% / 100%</span></div>
                                 <div class="am-progress">
-                                    <div class="am-progress-bar  am-progress-bar-warning" style="width: 75%"></div>
+                                    <div class="am-progress-bar  am-progress-bar-warning" style="width: 64%"></div>
                                 </div>
-                                <div class="am-progress-title">CPU Load <span class="am-fr am-progress-title-more">28% / 100%</span></div>
+                                <div class="am-progress-title">磁盘使用情况 Load <span class="am-fr am-progress-title-more">28% / 100%</span></div>
                                 <div class="am-progress">
-                                    <div class="am-progress-bar am-progress-bar-danger" style="width: 35%"></div>
+                                    <div class="am-progress-bar am-progress-bar-danger" style="width: 28%"></div>
                                 </div>
                             </div>
                         </div>
