--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,32 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="/ui/js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/ui/js/jquery.form.min.js" type="text/javascript" charset="utf-8"></script>
+
 </head>
 <body>
         <h1>欢迎登陆系统</h1>
-        <form id="from" action="/login" method="post">
-            <input type="text" id="username" name="username" placeholder="请输入用户名" value="admin">
-            <input type="text" id="password" name="password" placeholder="请输入密码" value="123">
-            <input type="text" id="captcha" name="captcha" placeholder="请输入验证码">
-            <img src="/user/generateImages" id="images" name="images">
-            记住我<input type="checkbox" id="rememberMe" name="rememberMe">
-            <input type="submit" id="sub" value="登录">
-        </form>
+        <input type="text" id="username" name="username" placeholder="请输入用户名" value="admin">
+        <input type="text" id="password" name="password" placeholder="请输入密码" value="123">
+        <input type="text" id="captcha" name="captcha" placeholder="请输入验证码">
+        <img src="/user/generateImages" id="images" name="images">
+        记住我<input type="checkbox" id="rememberMe" name="rememberMe" value="1">
+        <input type="submit" id="sub" value="登录">
 </body>
+<script src="/ui/js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="/ui/js/jquery.form.min.js" type="text/javascript" charset="utf-8"></script>
+
 <script type="text/javascript">
-    var q = true;
-    $("#sub").click(function () {
-        var qwe = true;
-        $("#from").ajaxSubmit(function (res) {
-            if(res.status!=200){
-                alert(123)
-                q = false;
+    $("#sub").click(function(){
+        var data ={};
+        data.username = $("#username").val();
+        data.password = $("#password").val();
+        data.captcha = $("#captcha").val();
+        data.rememberMe = $("#rememberMe").is(':checked')
+
+        $.ajax({
+            type : "POST",
+            url : "/login",
+            data : data,
+            success : function(res) {//返回数据根据结果进行相应的处理
+                console.log(res.status==200)
+                if(res.status==200){
+                    location.href = "/index"
+                }else{
+                   alert(res.msg)
+                }
             }
         });
-        alert('--->'+q)
-        return q;
     });
+
+
+
 </script>
 </html>
