--- a/src/main/resources/templates/blog/blog_admin/login.html
+++ b/src/main/resources/templates/blog/blog_admin/login.html
@@ -51,25 +51,14 @@
                     </div>
 
                     <div class="am-form-group">
-                        <img src="/user/generateImages" id="images" name="images">
-                        <input type="text" class="tpl-form-input code" id="code" placeholder="请输入密码">
+                        <input type="text" class="tpl-form-input code" id="code" placeholder="请输入验证码">
+                        <img src="/user/generateImages"  id="images" name="images">
                     </div>
 
-
-
-                    <div class="am-form-group tpl-login-remember-me">
+                    <div class="am-form-group tpl-login-remember-me floatright">
                         <input id="remember-me" type="checkbox">
-                        <label for="remember-me">
-       
-                        记住密码
-                         </label>
-
+                        <label for="remember-me">记住密码</label>
                     </div>
-
-
-
-
-
 
                     <div class="am-form-group">
 
@@ -88,7 +77,10 @@
         .code{
             margin-top: 12px;
             float: right;
-            width: 50%;
+            width: 50% !important;
+        }
+        .floatright{
+            float: right;
         }
     </style>
 </html>
