--- a/src/main/resources/templates/reLogin.html
+++ b/src/main/resources/templates/reLogin.html
@@ -44,14 +44,14 @@
 </div>
 <div class="container-main">
     <div class="main">
-        <div class="main_title">欢迎登陆个人博客系统</div>
+        <div class="main_title">BLOG博客系统</div>
         <div class="context">
             <input type="text" placeholder="手机号/邮箱/用户名">
             <input type="text" placeholder="密码">
         </div>
         <div class="forget">忘记密码</div>
-        <div><input type="button" value="登录"></div>
-        <div>没有账号？<span>立即注册</span></div>
+        <div class="submit_style"><input type="button" value="登录"></div>
+        <div class="register_style">没有账号？<span>立即注册</span></div>
         <div class="other">QQ 支付宝 微信  百度 新浪 github</div>
     </div>
 </div>
