--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,23 +1,84 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-
+    <meta charset="utf-8">
+    <title>Blog Center</title>
+    <meta name="keywords" content="博客中心" />
+    <meta name="description" content="博客中心" />
+    <link rel="icon" href="blog/images/vlogo.png" type="image/x-icon"/>
+    <link href="blog/css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="blog/css/login.css">
 </head>
-<body>
-        <h1>欢迎登陆系统</h1>
-        <input type="text" id="username" name="username" placeholder="请输入用户名" value="admin">
-        <input type="text" id="password" name="password" placeholder="请输入密码" value="123">
-        <input type="text" id="captcha" name="captcha" placeholder="请输入验证码">
-        <img src="/user/generateImages" id="images" name="images">
-        记住我<input type="checkbox" id="rememberMe" name="rememberMe" value="1">
-        <input type="submit" id="sub" value="登录">
-</body>
-<script src="/ui/js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="/ui/js/jquery.form.min.js" type="text/javascript" charset="utf-8"></script>
 
-<script type="text/javascript">
+<body>
+<!-- head  start -->
+<div class="m-head">
+    <div class="m-head-nav">
+        <ul class="c-wrapper">
+            <li class="m-head-nav-logo">
+                <a href="#"><img src="blog/images/vlogo.png" alt="LOGO">个人博客系统</a>
+            </li>
+            <li class="m-head-nav-item">
+                <a href="home_page.html">首页</a>
+            </li>
+            <li class="m-head-nav-item active">
+                <a href="blog_center.html">博客中心</a>
+            </li>
+            <li class="m-head-nav-item  ">
+                <a href="curriculum_vitae.html">个人履历</a>
+            </li>
+            <li class="m-head-nav-item  ">
+                <a href="feedback.html">客户反馈</a>
+            </li>
+            <li class="m-head-nav-item  ">
+                <a href="product_center.html">产品项目案例</a>
+            </li>
+            <li class="m-head-nav-right merchant-services">
+                <a href="#">登录/注册</a>
+            </li>
+            <li class="m-head-nav-right creative-center">
+                <a >创作中心</a>
+            </li>
+        </ul>
+    </div>
+</div>
+<div class="container-main">
+    <div class="main">
+        <div class="main_title">BLOG博客系统</div>
+        <div class="context">
+            <input type="text" id="username" placeholder="手机号/邮箱/用户名">
+            <input type="password" id="password" placeholder="密码">
+        </div>
+        <div class="verification-code">
+            <div class="code-one"><input class="code" id="captcha" type="text" placeholder="请输入验证码"></div>
+            <div class="code-tow"><img class="code" src="/user/generateImages" id="images" name="images" onclick="changeCode()"></div>
+        </div>
+        <div class="forget">
+            <div class="remember">记住我<input type="checkbox" id="rememberMe" name="rememberMe" value="1"></div>
+            <span>忘记密码</span>
+        </div>
+        <div class="submit_style"><input id="sub" class="sub-style" type="button" value="登录"></div>
+
+        <div class="register_style">没有账号？<span>立即注册</span></div>
+        <div class="other"><span onclick="qq()">QQ</span> 支付宝 微信  百度 新浪 github</div>
+
+    </div>
+</div>
+<footer class="footer">
+    <div class="Copyright">
+        <ul>
+            <a href="#">帮助中心</a><a href="#">空间客服</a><a href="#">投诉中心</a><a href="#">空间协议</a>
+        </ul>
+        <p class="copyright">备案号:<a href="http://www.miit.gov.cn" target="_blank" title="">京ICP备19012730号</a> - 网站名称： <a href="http://www.takeing.cn" title="个人生活分享" target="_blank">个人生活分享</a></p>
+    </div>
+</footer>
+</body>
+<script type="text/javascript" src="blog/js/jquery.min.js"></script>
+
+<script>
+    function changeCode(){
+        document.getElementById("images").src="/user/generateImages?"+Math.random();
+    }
     $("#sub").click(function(){
         var data ={};
         data.username = $("#username").val();
@@ -34,13 +95,20 @@
                 if(res.status==200){
                     location.href = "/index"
                 }else{
-                   alert(res.msg)
+                    alert(res.msg)
+                    changeCode();
                 }
             }
         });
     });
-
-
-
+    function qq() {
+        $.ajax({
+            type : "GET",
+            url : "/getQQUrl",
+            success : function(res) {
+                window.open(res)
+            }
+        });
+    }
 </script>
 </html>
