--- a/src/main/resources/static/blog/css/styles.css
+++ b/src/main/resources/static/blog/css/styles.css
@@ -446,7 +446,7 @@ aside section h2 {
 
 /* footer */
 footer {
-	border-top: 3px solid #e2d2a8;
+	border-top: 1px solid #969696;
 	background: #242221;
 	width: 100%;
 }
