--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,22 +19,22 @@
                 <a href="#"><img src="blog/images/vlogo.png" alt="LOGO">个人博客系统</a>
             </li>
             <li class="m-head-nav-item">
-                <a href="home_page.html">首页</a>
+                <a>首页</a>
             </li>
-            <li class="m-head-nav-item active">
-                <a href="blog_center.html">博客中心</a>
-            </li>
-            <li class="m-head-nav-item  ">
-                <a href="curriculum_vitae.html">个人履历</a>
+            <li class="m-head-nav-item">
+                <a>博客中心</a>
             </li>
             <li class="m-head-nav-item  ">
-                <a href="feedback.html">客户反馈</a>
+                <a>个人履历</a>
             </li>
             <li class="m-head-nav-item  ">
-                <a href="product_center.html">产品项目案例</a>
+                <a>客户反馈</a>
+            </li>
+            <li class="m-head-nav-item  ">
+                <a>产品项目案例</a>
             </li>
             <li class="m-head-nav-right merchant-services">
-                <a href="#">登录/注册</a>
+                <a>登录/注册</a>
             </li>
             <li class="m-head-nav-right creative-center">
                 <a >创作中心</a>
@@ -60,7 +60,7 @@
         <div class="submit_style"><input id="sub" class="sub-style" type="button" value="登录"></div>
 
         <div class="register_style">没有账号？<span>立即注册</span></div>
-        <div class="other"><span onclick="qq()">QQ</span> 支付宝 微信  百度 新浪 github</div>
+        <div class="other"><span onclick="qq()">QQ</span> 支付宝 百度 新浪 github</div>
 
     </div>
 </div>
