--- a/src/main/resources/templates/blog/blog_view/blog_center.html
+++ b/src/main/resources/templates/blog/blog_view/blog_center.html
@@ -12,43 +12,7 @@
 	
 	<body>
 		<!-- head  start -->
-		<div class="m-head">
-			<div class="m-head-nav">
-				<ul class="c-wrapper">
-					<li class="m-head-nav-logo">
-						<a href="#"><img src="/blog/images/vlogo.png" alt="LOGO">个人博客系统</a>
-					</li>
-		
-					<li class="m-head-nav-item">
-						<a href="home_page.html">首页</a>
-					</li>
-		
-					<li class="m-head-nav-item active">
-						<a href="/blog/getArticleList">博客中心</a>
-					</li>
-		
-					<li class="m-head-nav-item  ">
-						<a href="curriculum_vitae.html">个人履历</a>
-					</li>
-					
-					<li class="m-head-nav-item  ">
-						<a href="feedback.html">客户反馈</a>
-					</li>
-		
-					<li class="m-head-nav-item  ">
-						<a href="product_center.html">产品项目案例</a>
-					</li>
-		
-					<li class="m-head-nav-right merchant-services">
-						<a href="#">商家服务</a>
-					</li>
-					<li class="m-head-nav-right creative-center">
-						<a href="/editBlog">创作中心</a>
-					</li>
-		
-				</ul>
-			</div>
-		</div>
+		<div th:replace="blog/blog_view/header::#topbar(active='article')"></div>
 		<!-- head  end -->
 		<div class="mainContent">
 			<aside>
@@ -66,54 +30,31 @@
 					<p class="btns"><a href="#">私信</a><a href="#">相册</a><a href="#">存档</a></p>
 				</div>
 				<section class="taglist">
-					<h2>最新文章</h2>
+					<h2>热门文章</h2>
 					<ul>
 						<li><a href="#"><img src="/blog/images/01.jpg"></a></li>
 						<li><a href="#"><img src="/blog/images/02.jpg"></a></li>
 						<li><a href="#"><img src="/blog/images/03.jpg"></a></li>
 						<li><a href="#"><img src="/blog/images/04.jpg"></a></li>
 						<li><a href="#"><img src="/blog/images/05.jpg"></a></li>
-						<li><a href="#"><img src="/blog/images/06.jpg"></a></li>
-						<li><a href="#"><img src="/blog/images/07.jpg"></a></li>
-						<li><a href="#"><img src="/blog/images/08.jpg"></a></li>
 					</ul>
 				</section>
-				<section class="newpic">
-					<h2>最新照片</h2>
-					<ul>
-						<li><a href="#"><img src="/blog/images/01.jpg"></a></li>
-						<li><a href="#"><img src="/blog/images/02.jpg"></a></li>
-						<li><a href="#"><img src="/blog/images/03.jpg"></a></li>
-						<li><a href="#"><img src="/blog/images/04.jpg"></a></li>
-						<li><a href="#"><img src="/blog/images/05.jpg"></a></li>
-						<li><a href="#"><img src="/blog/images/06.jpg"></a></li>
-						<li><a href="#"><img src="/blog/images/07.jpg"></a></li>
-						<li><a href="#"><img src="/blog/images/08.jpg"></a></li>
-					</ul>
-				</section>
-				<section class="taglist">
-					<h2>分类专栏</h2>
-					<ul>
-						<li><a href="#">青空</a></li>
-						<li><a href="#">情感聊吧</a></li>
-						<li><a href="#">study</a></li>
-						<li><a href="#">青青唠叨</a></li>
-					</ul>
-				</section>
-				
 			</aside>
-			<div class="blogitem">
-				<article th:each="item : ${collects.list}">
-					<h2 class="title"><a th:text="${item.title}"></a><span class="design design-original">原创</span></h2>
-					<ul class="text">
-						<div  th:utext="${#strings.abbreviate(item.briefIntroduction,150)}"/>
-					</ul>
-					<div class="textfoot">
-						<a href="#">阅读全文</a><a href="#">评论</a><a href="#">转载</a>
-					</div>
-				</article>
-				<div class="page-hear">
-					<div id="pager" class="pager clearfix"></div>
+			<div class="blogitem" id="blogitem">
+				<div class="tableData">
+<!--					<article>-->
+<!--						<h2 class="title"><a>123123</a><span class="design design-original">原创</span></h2>-->
+<!--						<ul class="text">-->
+<!--							<div>123123</div>-->
+<!--						</ul>-->
+<!--						<div class="textfoot">-->
+<!--							<c class="release_time">发布时间：2020年10月5号  15:30:16</c>-->
+<!--							<a href="#">阅读全文</a><a href="#">评论</a><a href="#">转载</a>-->
+<!--						</div>-->
+<!--					</article>-->
+				</div>
+				<div class="page-hear" onclick="loading()">
+					<div id="pager" class="pager clearfix"><img src="/blog/images/svg/loading.svg"><a>点击加载更多...</a></div>
 				</div>
 			</div>
 		</div>
@@ -150,48 +91,39 @@
 	<script type="text/javascript" src="/blog/js/jquery.min.js"></script>
 	<script type="text/javascript" src="/blog/js/jquery.beattext.js"></script>
 	<script type="text/javascript" src="/blog/js/easying.js"></script>
-	<script type="text/javascript" src="/blog/js/jquery.z-pager.js"></script>
-	<script type="text/javascript" th:inline="javascript">
-		var pageNum = 1;//当前页数
-		var pages = 1;//总页数
-		var total = 1;//总条数
-
+	<script type="text/javascript">
+		var pageInfo = {
+			nextPage:''
+		}
 		$(function(){
-			//获取数据
-
+			initTable(1,5)
 		});
-
-		$('.topspaceinfo>p').beatText({isAuth:false,isRotate:false});
-		var pageInfo= [[${collects}]]
-		pageNum = pageInfo.pageNum;//当前页数
-		pages =pageInfo.pages;//总页数
-		total = pageInfo.total;//总条数
-		$("#pager").zPager({
-			totalData:total,//数据总条数
-			pageData:5,//每页数据条数
-			pageCount:pages,//总页数
-			current:pageNum+1,//当前页码数
-			pageStep:5,//当前可见最多页码个数
-			minPage:3,//最小页码数，页码小于此数值则不显示上下分页按钮
-			active:'current',//当前页码样式
-			prevBtn:'pg-prev',//上一页按钮
-			nextBtn:'pg-next',//下一页按钮
-			btnBool:true,//是否显示上一页下一页
-			firstBtn:'pg-first',//第一页按钮
-			lastBtn:'pg-last',//最后一页按钮
-			btnShow:true,//是否显示第一页和最后一页按钮
-			disabled:true,//按钮失效样式
-			ajaxSetData:true,//是否使用ajax获取数据此属性为真时需要url和htmlBox不为空
-			url:'',//ajax路由
-			htmlBox:''//ajax数据写入容器
-		});
-
-		function currentPage(currentPage){
-			/*
-				触发页码数位置： Page//blog/js/jquery.z-pager./blog/js 64行
-			*/
-			console.log("当前页码数：" + currentPage);
-			// window.location.href = "/blog/getArticleList?pageNum="+currentPage;
+		function initTable(pageNum,pageSize) {
+			$.ajax({
+				type: "GET",
+				url: "/blog/getArticleList",
+				data: {pageNum: pageNum,pageSize: pageSize},
+				dataType: "json",
+				success: function (res) {
+					pageInfo.nextPage =res.data.nextPage
+					console.log(res)
+					if (res.status == 200 && res.data.list != null) {
+						var html = "";
+						res.data.list.forEach(function (element) {
+							html += "<article><h2 class=\"title\"><a>" + element.title + "</a><span class=\"design design-original\">原创</span></h2><ul class=\"text\"><div>" + element.briefIntroduction + "</div></ul><div class=\"textfoot\"><c class=\"release_time\">发布时间："+element.createTime+"</c><a href=\"#\">阅读全文</a><a href=\"#\">评论</a><a href=\"#\">转载</a></div></article>";
+						});
+						$(".tableData").append(html);
+					}
+				}
+			});
+		}
+		//点击加载页面数据
+		function loading(){
+			if(pageInfo.nextPage != 0){
+				initTable(pageInfo.nextPage,5)
+			}else{
+				$(".clearfix>a").html("已经划不动了！就别再点了")
+			}
 		}
 	</script>
 </html>
