--- a/src/main/resources/templates/blog/blog_view/edit_blog.html
+++ b/src/main/resources/templates/blog/blog_view/edit_blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <title>home_page</title>
@@ -13,50 +13,14 @@
 </head>
 <body>
 <!-- head  start -->
-<div class="m-head">
-    <div class="m-head-nav">
-        <ul class="c-wrapper">
-            <li class="m-head-nav-logo">
-                <a href="#"><img src="blog/images/vlogo.png" alt="LOGO">个人博客系统</a>
-            </li>
-
-            <li class="m-head-nav-item active">
-                <a href="home_page.html">首页</a>
-            </li>
-
-            <li class="m-head-nav-item">
-                <a href="/blog/getArticleList">博客中心</a>
-            </li>
-
-            <li class="m-head-nav-item">
-                <a href="curriculum_vitae.html">个人履历</a>
-            </li>
-
-            <li class="m-head-nav-item">
-                <a href="feedback.html">客户反馈</a>
-            </li>
-
-            <li class="m-head-nav-item ">
-                <a href="product_center.html">产品项目案例</a>
-            </li>
-
-            <li class="m-head-nav-right merchant-services">
-                <a href="#">商家服务</a>
-            </li>
-            <li class="m-head-nav-right creative-center">
-                <a >创作中心</a>
-            </li>
-
-        </ul>
-    </div>
-</div>
+<div th:replace="blog/blog_view/header::#topbar"></div>
 <!-- head  end -->
 <!-- context start -->
 <div class="mainContent">
     <form action="/blog/addBlog" method="post" id="form">
         <input type="text" name="title" class="title_style" placeholder="请输入标题">
         <textarea id="mytextarea" placeholder="请输入博客内容" name="context"></textarea>
-        <input type="text" name="briefIntroduction" id="briefIntroduction">
+        <input type="hidden" name="briefIntroduction" id="briefIntroduction" maxlength=120>
         <div class="button_div" >
             <select name="categoryId" id="categoryId">
                 <option value="1">原创</option>
@@ -126,7 +90,7 @@
     //获取无格式内容消息
     function getText(){
         var cnt = tinyMCE.editors["mytextarea"].getContent({ format: 'text' });
-        cnt = cnt.split(0,150)
+        cnt = cnt.substring(0,120)
         $("#briefIntroduction").val(cnt)
     }
     //提交表单
